--- a/Layout/GF/src/app/app-inline-navbar/app-inline-navbar.component.html
+++ b/Layout/GF/src/app/app-inline-navbar/app-inline-navbar.component.html
@@ -55,7 +55,7 @@
           <a class="nav-link" routerLink="/blog">{{menu.blog}}</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/home">{{menu.guide}}</a>
+          <a class="nav-link" routerLink="/guide">{{menu.guide}}</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="javascript:void(0)" (click)="openSignInDialog()">{{menu.signin}}</a>
