--- a/Layout/GF/src/app/guide/guide.component.css
+++ b/Layout/GF/src/app/guide/guide.component.css
@@ -22,7 +22,10 @@
     color: #53bcb2;
     font-size: 32px;
 }
-
+.col-25 {
+    width: 25%;
+    padding-right: 20px;
+}
 .about {
     color: #757575;
 }
@@ -30,6 +33,14 @@
 .blog-img {
     width: 100%;
     height: 100%
+}
+@media (min-width: 992px){
+    .col-lg-2-5 {
+        -webkit-box-flex: 0;
+        -ms-flex: 0 0 20%;
+        flex: 0 0 20%;
+        max-width: 20%;
+    }
 }
 
 @media screen and (max-width: 770px) {
