--- a/Layout/GF/src/app/app-inline-navbar/app-inline-navbar.component.html
+++ b/Layout/GF/src/app/app-inline-navbar/app-inline-navbar.component.html
@@ -21,7 +21,11 @@
     </button>
   </div>
 
-    <div class="collapse navbar-collapse navbar-toggleable-sm d-md-block col-lg-6 col-md-9" id="navbarNavSearch">
+
+    <app-header-search></app-header-search>
+
+
+   <!-- <div class="collapse navbar-collapse navbar-toggleable-sm d-md-block col-lg-6 col-md-9" id="navbarNavSearch">
       <div class="row">
         <div class="col-lg-10  col-md-9  pr-mt-0  inputs-section" >
           <div class="row">
@@ -48,7 +52,8 @@
         </div>
 
       </div>
-    </div>
+    </div>-->
+
     <div class="collapse  navbar-toggleable-md navbar-collapse col-lg-4 text-md-left justify-content-lg-center order-md-2"  id="navbarNav" >
       <ul class="navbar-nav d-inline-flex ">
         <li class="nav-item active ">
