--- a/Layout/GF/src/app/app-navbar/app-navbar.component.html
+++ b/Layout/GF/src/app/app-navbar/app-navbar.component.html
@@ -17,7 +17,7 @@
     <i class="fa fa-search" aria-hidden="true"></i>
   </button>
   <div class="d-md-none">
-    <div class="collapse navbar-collapse " id="navbarNavSearch">
+   <!-- <div class="collapse navbar-collapse " id="navbarNavSearch">
       <div class="col-lg-8 mt-5 mt-sm-0 searching-bar">
         <div class="row">
           <div class="col-lg-7  col-md-10 pr-mt-0 inputs-section" *ngIf="show" >
@@ -45,7 +45,7 @@
 
         </div>
       </div>
-    </div>
+    </div>-->
   </div>
   <div class="navbar-collapse collapse p-0" id="navbarNav">
        <div class="col-lg-4 text-md-right text-lg-right ml-auto">
