--- a/Layout/GF/src/app/guide/guide.component.css
+++ b/Layout/GF/src/app/guide/guide.component.css
@@ -11,6 +11,7 @@
 .post a {
     color: #53bcb2;
     text-decoration: underline;
+    font-weight: bold;
 }
 
 .breadcrumbs {
@@ -21,7 +22,10 @@
     color: #53bcb2;
     font-size: 32px;
 }
-
+.col-25 {
+    width: 25%;
+    padding-right: 20px;
+}
 .about {
     color: #757575;
 }
@@ -30,7 +34,14 @@
     width: 100%;
     height: 100%
 }
-
+@media (min-width: 992px){
+    .col-lg-2-5 {
+        -webkit-box-flex: 0;
+        -ms-flex: 0 0 20%;
+        flex: 0 0 20%;
+        max-width: 20%;
+    }
+}
 @media screen and (max-width: 770px) {
     .post-section {
         padding-bottom: 45px;
