--- a/Layout/GF/src/app/guide/guide.component.html
+++ b/Layout/GF/src/app/guide/guide.component.html
@@ -17,7 +17,7 @@
 
 
     <div class="row post-section">
-        <div class="col-lg-4 col-xl-3 col-md-4 col-sm-12 ">
+        <div class="col-lg-2-5 col-md-4 col-sm-12 ">
                 <img src="../../assets/img/image.jpg" alt="" class="blog-img">
         </div>
         <div class="col-lg-8 col-xl-8 col-md-8 col-sm-12">
@@ -105,6 +105,5 @@
             </div>
         </div>
     </div>
-
 </div>
 
