--- a/Layout/GF/src/styles.css
+++ b/Layout/GF/src/styles.css
@@ -441,6 +441,22 @@ a:hover {
   cursor:pointer;
 }
 
+/*header search*/
+.dropdown-menu  {
+  position: absolute;
+  width: 100%;
+  max-height: 300px;
+  overflow-y: auto;
+  border-radius: 0;
+}
+
+
+.dropdown-item.active, .dropdown-item:active {
+  color: #EF7C8A !important;
+  background-color: transparent;
+}
+
+
 /*Large devices (desktops, 992px and up)*/
 @media (max-width: 992px) {
 
@@ -601,3 +617,5 @@ a:hover {
     font-size: 14px;
   }
 }
+
+
