--- a/Layout/GF/src/styles.css
+++ b/Layout/GF/src/styles.css
@@ -3,6 +3,7 @@
 @import "../src/assets/fonts/roboto/styles.css";
 @import "../src/assets/fonts/rouble/styles.css";
 @import '~font-awesome/css/font-awesome.min.css';
+@import "~nouislider/distribute/nouislider.min.css";
 
 body {
   font-family: "Roboto" !important;
@@ -90,6 +91,26 @@ h2 {
 
 .mat-checkbox-checkmark .mat-checkbox-checkmark-path {
   stroke: #ef7c8a !important;
+}
+
+.filters .mat-checkbox-checked.mat-accent .mat-checkbox-background,
+.filters .mat-checkbox-indeterminate.mat-accent .mat-checkbox-background {
+  background-color: #53bcb2 !important;
+}
+.filters .mat-checkbox-checked .mat-checkbox-frame{
+  border-color: transparent !important;
+}
+.filters .mat-checkbox-checkmark .mat-checkbox-checkmark-path {
+  stroke: #fff !important;
+}
+
+.filters .mat-ripple-element {
+  background-color: rgba(87, 148, 55, 0.2) !important;
+}
+
+.shadow{
+  background-color: white !important;
+  box-shadow: 0px 0px 10px 0px #0006;
 }
 
 #notify-method {
@@ -214,7 +235,9 @@ a:visited {
 .mat-content {
   display: inline-block!important;
 }
-
+.filters .mat-checkbox-label{
+  font-size: 14px;
+}
 .showhide::before {
  content: "+";
   float: left;
@@ -439,6 +462,41 @@ a:hover {
   border: none;
   background-color: #eeeeee;
   cursor:pointer;
+}
+
+.noUi-horizontal .noUi-handle{
+  width: 5px !important;
+  height: 15px !important;
+  right: -3px !important;
+  top: -6px !important;
+  border: none;
+  background-color: #3fb8af;
+  box-shadow: none;
+  cursor: pointer;
+}
+.noUi-horizontal {
+  height: 3px !important;
+  box-shadow: none !important;
+  border: 0 !important;
+  background: #d9d9d9 !important;
+}
+.noUi-horizontal:before,
+.noUi-horizontal:after{
+  content: '';
+  display: block;
+  position: absolute;
+  width: 3px !important;
+  height: 12px !important;
+  top: -5px !important;
+  background-color: #d9d9d9;
+  border-radius: 15px;
+}
+.noUi-horizontal:after{
+  right: -3px;
+}
+.noUi-horizontal .noUi-handle:before,
+.noUi-horizontal .noUi-handle:after{
+  display: none;
 }
 
 /*Large devices (desktops, 992px and up)*/
