--- a/Layout/GF/src/styles.css
+++ b/Layout/GF/src/styles.css
@@ -500,7 +500,7 @@ a:hover {
 }
 
 /*header search*/
-.dropdown-menu  {
+#navbarNavSearch .dropdown-menu  {
   position: absolute;
   width: 100%;
   max-height: 300px;
