--- a/Layout/GF/src/app/header-search/header-search.component.html
+++ b/Layout/GF/src/app/header-search/header-search.component.html
@@ -27,13 +27,13 @@
                             <div class="contaner">
                                 <div class="row">
                                     <div class="col-lg-3 col-md-4  col-12 mb-2">
-                                        <i class="material-icons icon">remove_circle</i>
+                                      <a href="javascript:void(0)"><i class="material-icons icon">remove_circle</i></a>
                                     </div>
                                     <div class="col-lg-3 col-md-4  col-12 mb-2">
                                         <span class="mx-auto n">999</span>
                                     </div>
                                     <div class="col-lg-3 col-md-4  col-12 mb-2">
-                                        <i class="material-icons icon">add_circle</i>
+                                      <a href="javascript:void(0)"><i class="material-icons icon">add_circle</i></a>
                                     </div>
                                 </div>
                             </div>
@@ -44,13 +44,13 @@
                             <div class="contaner">
                                 <div class="row">
                                     <div class="col-lg-3 col-md-4  col-12 mb-2 icon_dis">
-                                        <i class="material-icons icon_dis">remove_circle</i>
+                                      <a href="javascript:void(0)"><i class="material-icons icon_dis">remove_circle</i></a>
                                     </div>
                                     <div class="col-lg-3 col-md-4  col-12 mb-2 icon_dis">
                                         <span class="mx-auto">0</span>
                                     </div>
                                     <div class="col-lg-3 col-md-4  col-12 mb-2">
-                                        <i class="material-icons icon">add_circle</i>
+                                      <a href="javascript:void(0)"><i class="material-icons icon">add_circle</i></a>
                                     </div>
                                 </div>
                             </div>
@@ -66,27 +66,3 @@
         </div>
     </div>
 </div>
-
-
-<!--<div class="row justify-content-md-center m-lg-5 header-input-group pt-5  pt-sm-2 mt-3-md" *ngIf="!show" >
-    <div class="col-lg-9  col-md-10 pr-mt-0">
-        <div class="input-group col-lg-6 col-md-6 col-12">
-            <label for="inp1"><i class="material-icons">location_on</i></label>
-            <input type="text" class="form-control" id="inp1" placeholder="Что и где искать?"
-                   aria-describedby="basic-addon2">
-        </div>
-        <div class="input-group col-lg-3 col-md-3 col-6">
-            <label for="inp2"><i class="material-icons">date_range</i></label>
-            <input type="text" class="form-control" id="inp2" placeholder="Когда?" aria-describedby="basic-addon2">
-        </div>
-        <div class="input-group col-lg-3  col-md-3 col-6">
-            <label for="inp3"><i class="material-icons">person</i></label>
-            <input type="text" class="form-control" id="inp3" placeholder="Сколько вас?" aria-describedby="basic-addon2">
-        </div>
-    </div>
-    <div class="col-lg-2 col-md-2 col-12">
-        <div class="input-group">
-            <button type="button" class="btn btn-success btn-blue">Найти</button>
-        </div>
-    </div>
-</div>-->
