--- a/Layout/GF/src/app/add-event/add-event.component.html
+++ b/Layout/GF/src/app/add-event/add-event.component.html
@@ -10,7 +10,7 @@
       <button type="button" style="background-color: white;color: #3fb8af" class="btn btn-info col-sm-3">Английский
       </button>
     </div>
-    <br><br><br>
+    <br><br><br><br>
     <div class="col-sm-4" style="background-color:white;"><b> Название мероприятия:</b></div>
 
 
@@ -56,10 +56,11 @@
       <div class="container">
 
         <div class="row">
-          <div class="col-sm-8" >Максималное количество участников частное экскурсии<span style="color: red">&nbsp;*</span></div>
+          <div class="col-sm-8">Максималное количество участников частное экскурсии<span
+            style="color: red">&nbsp;*</span></div>
           <div class="col-sm-4">
             <div class="form-group">
-              <select class="form-control" >
+              <select class="form-control">
                 <option>7</option>
                 <option>6</option>
                 <option>5</option>
@@ -76,10 +77,10 @@
       <div class="container">
 
         <div class="row">
-          <div class="col-sm-8" >Стоимость частной экскурсии за челавека<span style="color: red">&nbsp;*</span></div>
+          <div class="col-sm-8">Стоимость частной экскурсии за челавека<span style="color: red">&nbsp;*</span></div>
           <div class="col-sm-4">
             <div class="form-group">
-              <input class="form-control" >
+              <input class="form-control">
 
 
             </div>
@@ -87,7 +88,6 @@
         </div>
       </div>
     </div>
-
 
 
     <br><br><br>
@@ -102,7 +102,8 @@
       <div class="container">
 
         <div class="row">
-          <div class="col-sm-8" >Минималное количество участников Груповое экскурсии<span style="color: red">&nbsp;*</span></div>
+          <div class="col-sm-8">Минималное количество участников Груповое экскурсии<span
+            style="color: red">&nbsp;*</span></div>
           <div class="col-sm-4">
             <div class="form-group">
               <select class="form-control" id="sel1">
@@ -122,10 +123,11 @@
       <div class="container">
 
         <div class="row">
-          <div class="col-sm-8" >Максималное количество участников Груповое экскурсии<span style="color: red">&nbsp;*</span></div>
+          <div class="col-sm-8">Максималное количество участников Груповое экскурсии<span
+            style="color: red">&nbsp;*</span></div>
           <div class="col-sm-4">
             <div class="form-group">
-              <select class="form-control" >
+              <select class="form-control">
                 <option>14</option>
                 <option>13</option>
                 <option>12</option>
@@ -148,10 +150,11 @@
       <div class="container">
 
         <div class="row">
-          <div class="col-sm-8" >Количество дополнителний места групавой экскурсии<span style="color: red">&nbsp;*</span></div>
+          <div class="col-sm-8">Количество дополнителний места групавой экскурсии<span style="color: red">&nbsp;*</span>
+          </div>
           <div class="col-sm-4">
             <div class="form-group">
-              <select class="form-control" >
+              <select class="form-control">
                 <option>7</option>
                 <option>6</option>
                 <option>5</option>
@@ -167,10 +170,10 @@
       <div class="container">
 
         <div class="row">
-          <div class="col-sm-8" >Стоимость групавой экскурсии <span style="color: red">&nbsp;*</span></div>
+          <div class="col-sm-8">Стоимость групавой экскурсии <span style="color: red">&nbsp;*</span></div>
           <div class="col-sm-4">
             <div class="form-group">
-              <input class="form-control" >
+              <input class="form-control">
 
 
             </div>
@@ -180,10 +183,10 @@
       <div class="container">
 
         <div class="row">
-          <div class="col-sm-8" >Стоимость дополнителний места экскурсии <span style="color: red">&nbsp;*</span></div>
+          <div class="col-sm-8">Стоимость дополнителний места экскурсии <span style="color: red">&nbsp;*</span></div>
           <div class="col-sm-4">
             <div class="form-group">
-              <input class="form-control" >
+              <input class="form-control">
 
 
             </div>
@@ -205,10 +208,11 @@
       <div class="container">
 
         <div class="row">
-          <div class="col-sm-8" >Максималное количество участников сборное экскурсии<span style="color: red">&nbsp;*</span></div>
+          <div class="col-sm-8">Максималное количество участников сборное экскурсии<span
+            style="color: red">&nbsp;*</span></div>
           <div class="col-sm-4">
             <div class="form-group">
-              <select class="form-control" >
+              <select class="form-control">
                 <option>7</option>
                 <option>6</option>
                 <option>5</option>
@@ -225,10 +229,10 @@
       <div class="container">
 
         <div class="row">
-          <div class="col-sm-8" >Стоимость сборное экскурсии за челавека<span style="color: red">&nbsp;*</span></div>
+          <div class="col-sm-8">Стоимость сборное экскурсии за челавека<span style="color: red">&nbsp;*</span></div>
           <div class="col-sm-4">
             <div class="form-group">
-              <input class="form-control" >
+              <input class="form-control">
 
 
             </div>
@@ -237,10 +241,131 @@
       </div>
     </div>
     <br><br><br>
+
     <div class="col-sm-4" style="background-color:white;"><b>Дополнительные услуги:</b></div>
-
-
     <div class="col-sm-8" style="background-color:white;">
+      <div class="container">
+        <div class="row">
+          <div class="edit col-sm-12">
+           <div class="col-sm-11">
+           </div>
+            <div class="col-sm-1">
+             <i class="material-icons">highlight_off</i>
+          </div>
+          </div>
+          <div class="edit col-sm-12"></div>
+          <div class="edit col-sm-12"></div>
+
+        </div>
+      </div>
+
+
+    </div>
+
+    <br><br><br><br><br><br><br>
+
+    <div class="col-sm-4" style="background-color:white;"><b>Тематика:</b></div>
+    <div class="col-sm-8" style="background-color:white;">
+      <button type="button" style="background-color: white;color: #3fb8af" class="btn btn-info col-sm-4">Обзорная
+        экскурсия
+      </button>
+      <button type="button" style="background-color: white;color: #3fb8af" class="btn btn-info col-sm-4">Тематическая
+        экскурсия
+      </button>
+    </div>
+
+
+    <br><br><br>
+
+
+    <div class="col-sm-4" style="background-color:white;"><b>Роспопожение:</b></div>
+    <div class="col-sm-8" style="background-color:white;">
+      <div class="form-group">
+        <select class="form-control col-md-8">
+          <option>Россия</option>
+
+        </select>
+      </div>
+    </div>
+    <br><br><br>
+
+
+    <div class="col-sm-4" style="background-color:white;"><b>Роспопожение:</b></div>
+    <div class="col-sm-8" style="background-color:white;">
+      <div class="form-group">
+        <select class="form-control col-md-8">
+          <option>Россия</option>
+
+        </select>
+      </div>
+    </div>
+    <br><br><br>
+
+
+    <div class="col-sm-4" style="background-color:white;"><b>Роспопожение:</b></div>
+    <div class="col-sm-8" style="background-color:white;">
+      <div class="form-group">
+        <select class="form-control col-md-8">
+          <option>Россия</option>
+
+        </select>
+      </div>
+    </div>
+
+    <br><br><br>
+
+
+    <div class="col-sm-4" style="background-color:white;"><b>Роспопожение:</b></div>
+    <div class="col-sm-8" style="background-color:white;">
+      <div class="form-group">
+        <select class="form-control col-md-8">
+          <option>Россия</option>
+
+        </select>
+      </div>
+    </div>
+    <br> <br> <br>
+    <div class="container">
+
+      <div class="row">
+        <div class="col-sm-4" style="background-color:white;"><b>Теги:</b></div>
+        <div class="col-sm-8">
+          <button type="button" style="background-color: white;color: black;border: solid 1px darkgrey"
+                  class="tags btn btn-info ">Обзор
+          </button>
+          <button type="button" style="background-color: white;color: #3fb8af;" class="tags btn btn-info "> Тематическая
+            экскурсия
+          </button>
+          <button type="button" style="background-color: white;color: black;border: solid 1px darkgrey  ;"
+                  class="tags btn btn-info ">Виды на город
+          </button>
+
+
+          <button type="button" style="background-color: white;color: #3fb8af" class="tags btn btn-info "> Экскурсия
+          </button>
+          <button type="button" style="background-color: white;color: black;" class="tags btn btn-info "> История
+          </button>
+          <button type="button" style="background-color: white;color: black;" class="tags btn btn-info ">
+            Искусствоведение
+          </button>
+        </div>
+        <br> <br>
+
+        <div class="col-sm-4" style="background-color:white;"></div>
+        <div class="col-sm-8">
+          <button type="button" style="background-color: white;color: black;border: solid 1px darkgrey"
+                  class="tags btn btn-info ">Литература
+          </button>
+          <button type="button" style="background-color: white;color: #3fb8af;" class="tags btn btn-info "> Религия
+          </button>
+          <button type="button" style="background-color: white;color: #3fb8af;" class="tags btn btn-info "> Спорт
+          </button>
+          <button type="button" style="background-color: white;color: black;border: solid 1px darkgrey"
+                  class="tags btn btn-info ">Фотография
+          </button>
+        </div>
+
+      </div>
 
     </div>
 
