--- a/Layout/GF/src/app/events/events.component.html
+++ b/Layout/GF/src/app/events/events.component.html
@@ -3,7 +3,7 @@
   <div class="row filters mt-5">
     <div class="col-9 col-xs-12 col-xl-9 col-lg-7 col-md-7">
       <!--Тематика-->
-      <div ngbDropdown class="d-inline-block mr-2 mb-2" #filterItem="ngbDropdown">
+      <div ngbDropdown class="d-inline-block mr-2 mb-2" #filterItem="ngbDropdown" (open)="dropChange()">
         <button class="btn btn-outline-primary green" id="ftr1" ngbDropdownToggle>Тематика</button>
         <div ngbDropdownMenu aria-labelledby="ftr1" class="w-500">
           <div class="row p-2 pr-3 pl-3">
@@ -117,11 +117,20 @@
       <div class=" sortBy d-flex align-items-center justify-content-end flex-column-sm">
         <span>Сортировать</span>
         <div class="btn-group-toggle">
-          <label class="btn-primary mx-1 mb-2" ngbButtonLabel>
-            <input type="checkbox" ngbButton [(ngModel)]="filters.byRate"> По рейтингу
-          </label>
-          <label class="btn-primary ml-1 mb-2" ngbButtonLabel>
-            <input type="checkbox" ngbButton [(ngModel)]="filters.byAsc"> По возрастанию
+          <div ngbDropdown class="d-inline-block filterBy ml-1 mb-2-md" #filterItem="ngbDropdown">
+            <button class="btn btn-outline-primary" id="ftr9" ngbDropdownToggle openChange="dropChange()">{{ftrlBy || "По рейтингу"}}</button>
+            <div ngbDropdownMenu aria-labelledby="ftr9" class="p-3">
+              <div class="item col-12 mb-2" (click)="ftrlBy = $event.target.innerText" >По рейтингу</div>
+              <div class="item col-12 mb-2" (click)="ftrlBy = $event.target.innerText" >По отзывам</div>
+              <div class="item col-12 mb-2" (click)="ftrlBy = $event.target.innerText" >По новизне</div>
+              <div class="item col-12 mb-2" (click)="ftrlBy = $event.target.innerText" >По цене</div>
+            </div>
+          </div>
+
+          <label class="btn-primary ml-1" ngbButtonLabel>
+            <input type="checkbox" ngbButton [(ngModel)]="filters.byAsc">
+            <span *ngIf="filters.byAsc">По возрастанию</span>
+            <span *ngIf="!filters.byAsc">По убыванию</span>
           </label>
         </div>
       </div>
