--- a/Layout/GF/src/app/header-search/header-search.component.html
+++ b/Layout/GF/src/app/header-search/header-search.component.html
@@ -2,7 +2,7 @@
 <script src="https://unpkg.com/zone.js@^0.6.23/dist/long-stack-trace-zone.js"></script>
 <script src="https://unpkg.com/reflect-metadata@^0.1.8/Reflect.js"></script>
 <script src="https://unpkg.com/systemjs@^0.19.40/dist/system.js"></script>
-<div class="row collapse navbar-collapse navbar-toggleable-sm d-md-block col-lg-12 col-md-9" id="navbarNavSearch" >
+<div class="row collapse navbar-collapse navbar-toggleable-md col-lg-12 col-md-9 p-0-md" id="navbarNavSearch" >
     <div class="row">
         <div class="col-lg-10  col-md-10  pr-mt-0  inputs-section">
             <div class="row">
@@ -21,18 +21,18 @@
                            aria-describedby="basic-addon2" ngbDropdownToggle>
                     <label for="inp3"><i class="material-icons">person</i></label>
 
-                    <div ngbDropdownMenu aria-labelledby="ftr2" class="p-3">
+                    <div ngbDropdownMenu aria-labelledby="ftr2" class="p-3 p-0-md">
                         <div class="col-12"><h6 class="group-title"><b>Взрослые</b></h6></div>
                         <div class="col-12 mb-2">
                             <div class="contaner">
                                 <div class="row">
-                                    <div class="col-lg-3 col-md-4  col-12 mb-2">
+                                    <div class="col-lg-3 col-md-4  col-4 mb-2">
                                       <a href="javascript:void(0)"><i class="material-icons icon">remove_circle</i></a>
                                     </div>
-                                    <div class="col-lg-3 col-md-4  col-12 mb-2">
+                                    <div class="col-lg-3 col-md-4  col-4 mb-2">
                                         <span class="mx-auto n">999</span>
                                     </div>
-                                    <div class="col-lg-3 col-md-4  col-12 mb-2">
+                                    <div class="col-lg-3 col-md-4  col-4 mb-2">
                                       <a href="javascript:void(0)"><i class="material-icons icon">add_circle</i></a>
                                     </div>
                                 </div>
@@ -43,13 +43,13 @@
                         <div class="col-12 mb-2">
                             <div class="contaner">
                                 <div class="row">
-                                    <div class="col-lg-3 col-md-4  col-12 mb-2 icon_dis">
+                                    <div class="col-lg-3 col-md-4  col-4 mb-2 icon_dis">
                                       <a href="javascript:void(0)"><i class="material-icons icon_dis">remove_circle</i></a>
                                     </div>
-                                    <div class="col-lg-3 col-md-4  col-12 mb-2 icon_dis">
+                                    <div class="col-lg-3 col-md-4  col-4 mb-2 icon_dis">
                                         <span class="mx-auto">0</span>
                                     </div>
-                                    <div class="col-lg-3 col-md-4  col-12 mb-2">
+                                    <div class="col-lg-3 col-md-4  col-4 mb-2">
                                       <a href="javascript:void(0)"><i class="material-icons icon">add_circle</i></a>
                                     </div>
                                 </div>
