--- a/Layout/GF/src/app/add-event/add-event.component.html
+++ b/Layout/GF/src/app/add-event/add-event.component.html
@@ -7,7 +7,11 @@
       <button type="button" style="background-color: white;color: #3fb8af" class="btn btn-info col-sm-3">Английский
       </button>
     </div>
+
+
     <br><br><br><br>
+
+
     <div class="col-sm-4" style="background-color:white;"><b> Название мероприятия:</b></div>
 
 
@@ -18,10 +22,12 @@
                placeholder=" Ввадите название мероприятия по русском язике" class=" form-control">
       </div>
     </div>
+
+
     <br><br><br>
+
+
     <div class="col-sm-4" style="background-color:white;"><b> Что входит в стоимость:</b></div>
-
-
     <div class="col-sm-8" style="background-color:white;">
       <div class="form-group">
 
@@ -29,6 +35,8 @@
                   placeholder=" Описание   мероприятия,не более 600 символов" class=" form-control"></textarea>
       </div>
     </div>
+
+
     <br><br><br><br>
     <div class="col-sm-4" style="background-color:white;"><b>Продлжителность:</b></div>
 
@@ -42,6 +50,8 @@
     </div>
 
     <br><br><br>
+
+
     <div class="col-sm-4" style="background-color:white;"><b>Частное мероприятие:</b></div>
 
 
@@ -88,6 +98,8 @@
 
 
     <br><br><br>
+
+
     <div class="col-sm-4" style="background-color:white;"><b>Груповое мероприятие:</b></div>
 
 
@@ -241,25 +253,60 @@
 
     <div class="col-sm-4" style="background-color:white;"><b>Дополнительные услуги:</b></div>
     <div class="col-sm-8" style="background-color:white;">
-      <div class="container">
-        <div class="row">
-          <div class="edit col-sm-12">
-           <div class="col-sm-11">
-           </div>
-            <div class="col-sm-1">
-             <i class="material-icons">highlight_off</i>
-          </div>
-          </div>
-          <div class="edit col-sm-12"></div>
-          <div class="edit col-sm-12"></div>
 
+      <div class="grey container-fluid   ">
+        <div class="row">
+          <div class="col-sm-9  editTaitle"> &nbsp;Переводчик</div>
+          <div class="col-sm-3  editTaitle">5 000 <i class="ic material-icons ">mode_edit</i> <i
+            class="close  material-icons">highlight_off</i></div>
+        </div>
+      </div>
+      <div class="grey  container-fluid">
+        <div class="row">
+          <div class="col-sm-9 editTaitle">&nbsp; Шопингконсултант</div>
+          <div class=" col-sm-3 editTaitle">2 000 <i class="ic material-icons ">mode_edit</i> <i
+            class="close material-icons">highlight_off</i></div>
+        </div>
+      </div>
+
+      <div class="grey  container-fluid">
+        <div class="row">
+          <div class="col-sm-9 editTaitle">&nbsp; Услуги фотографа</div>
+          <div class="col-sm-3 editTaitle">1 000 <i class="ic material-icons ">mode_edit</i> <i
+            class="close  material-icons">highlight_off</i></div>
         </div>
       </div>
 
 
     </div>
+    <div class="col-sm-4" style="background-color:white;"><b></b></div>
+    <div class="col-sm-8" style="background-color:white;"><i class="pluse material-icons">add_circle_outline
+      <button type="button" class="pluselink btn btn-link">Добавить дополнителную услугу</button>
+    </i></div>
 
-    <br><br><br><br><br><br><br>
+    <div class="col-sm-4" style="background-color:white;"><b></b></div>
+    <div class="col-sm-8" style="background-color:white;">
+
+        <div class="row">
+          <div class="col-sm-6">
+            <div class="form-group">
+              <label for="inp11"><b>Нозвание:</b></label>
+              <input type="text" class="form-control" id="inp11">
+            </div>
+          </div>
+          <div class="col-sm-6">
+            <div class="form-group">
+              <label for="inp22"><b>Стоимость:</b></label>
+              <input type="text" class="form-control" id="inp22">
+            </div>
+
+          </div>
+        </div>
+
+
+
+    </div>
+    <br><br><br><br>
 
     <div class="col-sm-4" style="background-color:white;"><b>Тематика:</b></div>
     <div class="col-sm-8" style="background-color:white;">
@@ -364,6 +411,43 @@
 
       </div>
 
+    </div>
+    <br> <br> <br> <br> <br> <br>
+    <div class="col-sm-4" style="background-color:white;"><b>Главный фото:</b><span style="color: red">&nbsp;*</span><p></p></div>
+    <div class="col-sm-8" >
+           <div class="foto col-sm-8">
+             <div> <i class="fotoIc material-icons">camera_alt</i></div>
+             <p class="hint"> Вы можете перетащить фото сюда</p>
+             <p class="hint"> или</p>
+             <div class="uploadFail">Выберите файл</div>
+           </div>
+    </div>
+
+    <div class="col-sm-4" ><b>Фотография:</b><p></p></div>
+    <div class="col-sm-8" >
+      <div class="foto col-sm-8">
+        <div> <i class="fotoIc material-icons">camera_alt</i></div>
+        <p class="hint"> Вы можете перетащить фото сюда</p>
+        <p class="hint"> или</p>
+        <div class="uploadFail">Выберите файл</div>
+      </div>
+    </div>
+
+    <div class="col-sm-4" style="background-color:white;"><b>Видео:</b><p></p></div>
+    <div class="col-sm-8" >
+      <div class="foto col-sm-8">
+        <div> <i class="fotoIc material-icons">camera_alt</i></div>
+        <p class="hint"> Вы можете перетащить видео сюда</p>
+        <p class="hint"> или</p>
+        <div class="uploadFail">Выберите файл</div>
+      </div>
+    </div>
+
+    <div class="col-sm-4" style="background-color:white;"><b>Картографическая информация марштуие:</b><p></p></div>
+    <div class="col-sm-8" >
+      <div class="map  col-sm-8">
+
+      </div>
     </div>
 
 
